[Feat]Fix testing, and some bugs
