# docs/swagger.json
@@ -6,6 +6,14 @@
     "paths": {
         "/booking": {
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    },
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Books a room for a user, requiring down payment based on the room price and user's balance.",
                 "consumes": [
                     "application/json"
@@ -26,6 +34,13 @@
                         "schema": {
                             "$ref": "#/definitions/entity.BookingRequest"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Bearer Token (Example: 'Bearer \u003cyour_token\u003e')",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -69,6 +84,14 @@
         },
         "/booking/report": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    },
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Retrieves all bookings made by a specific user.",
                 "produces": [
                     "application/json"
@@ -77,6 +100,15 @@
                     "Booking"
                 ],
                 "summary": "Get booking report for a user",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer Token (Example: 'Bearer \u003cyour_token\u003e')",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Booking report retrieved successfully",
@@ -159,6 +191,83 @@
                             "additionalProperties": {
                                 "type": "string"
                             }
+                        }
+                    }
+                }
+            }
+        },
+        "/invoice_webhook_url": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    },
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Processes the webhook sent by Xendit for invoice updates (e.g., PAID, EXPIRED).",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Webhook"
+                ],
+                "summary": "Handles Invoice Webhook from Xendit",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Xendit Callback Token",
+                        "name": "x-callback-token",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "Webhook Payload",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/entity.WebhookPayload"
+                        }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Bearer Token (Example: 'Bearer \u003cyour_token\u003e')",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request - Failed to parse JSON",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized - Invalid callback token",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
                         }
                     }
                 }
@@ -319,6 +428,14 @@
         },
         "/top-up": {
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    },
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Top up the balance of a user by providing a `BalanceRequest` object which includes the amount to be added to the balance.",
                 "consumes": [
                     "application/json"
@@ -339,6 +456,13 @@
                         "schema": {
                             "$ref": "#/definitions/entity.BalanceRequest"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Bearer Token (Example: 'Bearer \u003cyour_token\u003e')",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -375,6 +499,14 @@
         },
         "/user-info": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    },
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Retrieves user information such as email, full name, and balance by user ID.",
                 "consumes": [
                     "application/json"
@@ -386,6 +518,15 @@
                     "User"
                 ],
                 "summary": "Get user information",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer Token (Example: 'Bearer \u003cyour_token\u003e')",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "User information retrieved successfully",
@@ -409,68 +550,6 @@
                     },
                     "500": {
                         "description": "Internal server error",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    }
-                }
-            }
-        },
-        "/webhook/invoice": {
-            "post": {
-                "description": "Processes the webhook sent by Xendit for invoice updates (e.g., PAID, EXPIRED).",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Webhook"
-                ],
-                "summary": "Handles Invoice Webhook from Xendit",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Xendit Callback Token",
-                        "name": "x-callback-token",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "description": "Webhook Payload",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/entity.WebhookPayload"
-                        }
-                    }
-                ],
-                "responses": {
-                    "204": {
-                        "description": "No Content",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request - Failed to parse JSON",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized - Invalid callback token",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
                         "schema": {
                             "type": "object",
                             "additionalProperties": true
